--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8" />
     <title>etch a sketch</title>
+    <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="container">
+    <div class="container-button">
+        <button id="resize-button">Resize Grid</button>
+    </div>
+    <div class="container-grid">
 
     </div>
 </body>
