add resize input/button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container-button">
+        <input id="resize-input">
         <button id="resize-button">Resize Grid</button>
     </div>
     <div class="container-grid">
